[package]
name = "actix-cbor"
version = "0.1.0"
authors = ["noah <nomaxx117@gmail.com>"]
edition = "2018"

[features]
compress = ["actix-web/compress"]

[dependencies]
log = "0.4.11"
mime = "0.3.16"
futures-util = "0.3.5"
serde_cbor = "0.11.1"
serde = "^1.0.0"
actix-http = "^2.0.0"

[dependencies.actix-web]
version = "^3.0.0"
default-features = false